--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fullstack Webpack</title>
+    <title>Plantery</title>
 
   </head>
   <body>
 
     <!-- react app -->
     <div id="root"></div>
-    <script src="dist/bundle.js"></script>
+    <script src="../build/bundle.js"></script>
     <!-- webpack script: to be autoloaded -->
     
   </body>
